QPID-8613 - [Broker-J] Graylog plugin update